--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   newman: postman/newman@0.0.2
+  discord: antonioned/discord@0.1.0
 jobs:
   newman-collection-run:
     executor: newman/postman-newman-docker
@@ -8,6 +9,10 @@ jobs:
       - checkout
       - newman/newman-run:
           collection: ./Stock.postman_collection.json
+      - discord/status:
+          fail_only: false
+          failure_message: "**${CIRCLE_JOB}** failed."
+          webhook: "https://discord.com/api/webhooks/845415359527911485/U0f8h1rAXgU24fBn3y-z3zQSqbroI7CZ-MmI9A0i5BPP2LBYPNTG_ExcizlvhnaqwtS1"
 workflows:
   version: 2
   build_and_test:
