--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     executor: newman/postman-newman-docker
     steps:
       - checkout
+      - run: apk update && apk add curl curl-dev
       - newman/newman-run:
           collection: ./Stock.postman_collection.json
       - discord/status:
