--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   newman: postman/newman@0.0.2
   discord: antonioned/discord@0.1.0
 jobs:
-  newman-collection-run:
+  PS5-Stock:
     executor: newman/postman-newman-docker
     steps:
       - checkout
@@ -15,11 +15,9 @@ jobs:
           fail_only: false
           failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
           webhook: "${DISCORD_STATUS_WEBHOOK}"
+          mentions: "Zansin#3228,Exias#9200,CaratG#7392,lei2986852#3457"
 workflows:
   version: 2
-  build_and_test:
-    jobs:
-      - newman-collection-run
   daily:
     triggers:
       - schedule:
@@ -29,4 +27,4 @@ workflows:
               only:
                 - master
     jobs:
-      - newman-collection-run
+      - PS5-Stock
