--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - discord/status:
           fail_only: false
           failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
-          mentions: "Zansin#3228"
+          mentions: "@Zansin"
           webhook: "${DISCORD_STATUS_WEBHOOK}"
 workflows:
   version: 2
