--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,13 @@ jobs:
       - newman/newman-run:
           collection: ./Stock.postman_collection.json
       - discord/status:
-          fail_only: true
-          failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
+          fail_only: false
+          failure_message: >
+            TESTING Found PS5 Stock. 
+            https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html
+            https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
+            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
+            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html
           webhook: "${DISCORD_STATUS_WEBHOOK}"
 workflows:
   version: 2
