--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,18 +13,16 @@ jobs:
           collection: ./Stock.postman_collection.json
       - discord/status:
           fail_only: false
-          success_message:  >
-            TESTING Found PS5 Stock. 
+          success_message:  "TESTING Found PS5 Stock. 
             https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html
             https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
             https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
-            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html
-          failure_message: >
-            TESTING Found PS5 Stock. 
+            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html"
+          failure_message: "TESTING Found PS5 Stock. 
             https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html
             https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
             https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
-            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html
+            https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html"
           webhook: "${DISCORD_STATUS_WEBHOOK}"
 workflows:
   version: 2
