--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ workflows:
   daily:
     triggers:
       - schedule:
-          cron: "0,5,10,15,20,25,30,35,40,45,50,55 * * * *"
+          cron: "0,5,10,15,20,25,30,35,40,45,50,55 22,23,0,1,2,3,4,5 * * *"
           filters:
             branches:
               only:
