--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,18 @@ jobs:
           collection: ./Stock.postman_collection.json
       - discord/status:
           fail_only: true
-          success_message: "Found PS5 Stock.
-          [][][][][][][][] https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html 
-          [][][][][][][][] https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
-          [][][][][][][][] https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
-          [][][][][][][][] https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html"
-          failure_message: "Found PS5 Stock.
-          [][][][][][][][] https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html 
-          [][][][][][][][] https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
-          [][][][][][][][] https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
-          [][][][][][][][] https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html"
+          success_message: "---- Warehouse PS5 Disk https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html ----
+          ---- Warehouse PS5 Digital https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html ----
+          ---- Warehouse Xbox X Halo https://www.thewarehouse.co.nz/p/xbox-series-x-halo-infinite-limited-edition-bundle/R2784701.html ----
+          ---- NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html ----
+          ---- NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html ----
+          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html"
+          failure_message: "---- Warehouse PS5 Disk https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html ----
+          ---- Warehouse PS5 Digital https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html ----
+          ---- Warehouse Xbox X Halo https://www.thewarehouse.co.nz/p/xbox-series-x-halo-infinite-limited-edition-bundle/R2784701.html ----
+          ---- NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html ----
+          ---- NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html ----
+          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html"
           webhook: "${DISCORD_STATUS_WEBHOOK}"
 workflows:
   version: 2
