--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
           ---- Warehouse xbox X 1tb https://www.thewarehouse.co.nz/p/xbox-series-x-1tb-console/R2708605.html ----
           ---- NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html ----
           ---- NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html ----
-          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html"
+          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html
+          ---- JB Hifi XBox X https://www.jbhifi.co.nz/gaming/games/Gaming-Consoles/xbox-series-x/xbox-series-x-console-halo-infinite-limited-edition/400800/ ----"
           webhook: "${DISCORD_STATUS_WEBHOOK}"
 workflows:
   version: 2
