--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,22 +12,18 @@ jobs:
       - newman/newman-run:
           collection: ./Stock.postman_collection.json
       - discord/status:
-          fail_only: true
-          success_message: "---- Warehouse PS5 Disk https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html ----
-          ---- Warehouse PS5 Digital https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html ----
-          ---- Warehouse Xbox X Halo https://www.thewarehouse.co.nz/p/xbox-series-x-halo-infinite-limited-edition-bundle/R2784701.html ----
-          ---- NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html ----
-          ---- NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html ----
-          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html"
-          failure_message: "---- Warehouse PS5 Disk https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html ----
-          ---- Warehouse PS5 Digital https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html ----
-          ---- Warehouse Xbox X Halo https://www.thewarehouse.co.nz/p/xbox-series-x-halo-infinite-limited-edition-bundle/R2784701.html ----
-          ---- Warehouse xbox X 1tb https://www.thewarehouse.co.nz/p/xbox-series-x-1tb-console/R2708605.html ----
-          ---- NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html ----
-          ---- NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html ----
-          ---- NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html
-          ---- JB Hifi XBox X https://www.jbhifi.co.nz/gaming/games/Gaming-Consoles/xbox-series-x/xbox-series-x-console-halo-infinite-limited-edition/400800/ ----"
           webhook: "${DISCORD_STATUS_WEBHOOK}"
+          fail_only: true
+          failure_message: >
+            Warehouse PS5 Disk https://www.thewarehouse.co.nz/p/ps5-console/R2695122.html
+            Warehouse PS5 Digital https://www.thewarehouse.co.nz/p/ps5-playstation-5-digital-edition/R2695123.html
+            Warehouse Xbox X Halo https://www.thewarehouse.co.nz/p/xbox-series-x-halo-infinite-limited-edition-bundle/R2784701.html
+            Warehouse xbox X 1tb https://www.thewarehouse.co.nz/p/xbox-series-x-1tb-console/R2708605.html
+            NoelLemming PS5 Disk https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015a-console/prod192865.html
+            NoelLemming PS5 Digital https://www.noelleeming.co.nz/shop/games-gaming/playstation/playstation-5/playstation-5-cfi-1015b-digital-edition-console/prod192879.html
+            NoelLemming XBox X https://www.noelleeming.co.nz/shop/games-gaming/xbox/xbox-series-x/xbox-series-rrt-00021-x-console/prod193770.html
+            JB Hifi XBox X https://www.jbhifi.co.nz/gaming/games/Gaming-Consoles/xbox-series-x/xbox-series-x-console-halo-infinite-limited-edition/400800/
+          
 workflows:
   version: 2
   build_and_test:
