--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,24 +14,24 @@ jobs:
       - discord/status:
           webhook: "${DISCORD_STATUS_WEBHOOK}"
           fail_only: false
-          failure_message: "- WH PS5 Disk https://bit.ly/3lMC2bt ...............................................................................
-          - WH PS5 Digital https://bit.ly/3Avb1zj ............................................................................
-          - WH Xbox X Halo https://bit.ly/2XFKOjG ............................................................................
-          - NL PS5 Disk https://bit.ly/3EFhSZD ...............................................................................
-          - NL PS5 Digital https://bit.ly/3u82AYA ............................................................................
-          - NL XBox X https://bit.ly/3EPMNma .................................................................................
-          - JB XBox X https://bit.ly/39oP7lB .................................................................................
-          - MA XBox https://bit.ly/3lFB54w ...................................................................................
-          - MA PS5 https://bit.ly/2W4e6Ym ...................................................................................."
-          success_message: "- WH PS5 Disk https://bit.ly/3lMC2bt ...............................................................................
-          - WH PS5 Digital https://bit.ly/3Avb1zj ............................................................................
-          - WH Xbox X Halo https://bit.ly/2XFKOjG ............................................................................
-          - NL PS5 Disk https://bit.ly/3EFhSZD ...............................................................................
-          - NL PS5 Digital https://bit.ly/3u82AYA ............................................................................
-          - NL XBox X https://bit.ly/3EPMNma .................................................................................
-          - JB XBox X https://bit.ly/39oP7lB .................................................................................
-          - MA XBox https://bit.ly/3lFB54w ...................................................................................
-          - MA PS5 https://bit.ly/2W4e6Ym ...................................................................................."
+          failure_message: "WH PS5 Disk https://bit.ly/3lMC2bt .....................................................................................
+          WH PS5 Digital https://bit.ly/3Avb1zj ..................................................................................
+          WH Xbox X Halo https://bit.ly/2XFKOjG ..................................................................................
+          NL PS5 Disk https://bit.ly/3EFhSZD .....................................................................................
+          NL PS5 Digital https://bit.ly/3u82AYA ..................................................................................
+          NL XBox X https://bit.ly/3EPMNma .......................................................................................
+          JB XBox X https://bit.ly/39oP7lB .......................................................................................
+          MA XBox https://bit.ly/3lFB54w .........................................................................................
+          MA PS5 https://bit.ly/2W4e6Ym .........................................................................................."
+          success_message: "WH PS5 Disk https://bit.ly/3lMC2bt .....................................................................................
+          WH PS5 Digital https://bit.ly/3Avb1zj ..................................................................................
+          WH Xbox X Halo https://bit.ly/2XFKOjG ..................................................................................
+          NL PS5 Disk https://bit.ly/3EFhSZD .....................................................................................
+          NL PS5 Digital https://bit.ly/3u82AYA ..................................................................................
+          NL XBox X https://bit.ly/3EPMNma .......................................................................................
+          JB XBox X https://bit.ly/39oP7lB .......................................................................................
+          MA XBox https://bit.ly/3lFB54w .........................................................................................
+          MA PS5 https://bit.ly/2W4e6Ym .........................................................................................."
           
 workflows:
   version: 2
