--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           fail_only: false
           failure_message: "WH PS5 DISK https://bit.ly/3lMC2bt ...................................................................................
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
-          WH XBOX HALO https://bit.ly/2XFKOjG ................................................................................
+          WH XBOX HALO https://bit.ly/2XFKOjG ...............................................................................
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
           NL PS5 DIGITAL https://bit.ly/3u82AYA ................................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
@@ -25,7 +25,7 @@ jobs:
           MA PS5 DIGITAL https://bit.ly/2W4e6Ym ................................................................................"
           success_message: "WH PS5 DISK https://bit.ly/3lMC2bt ...................................................................................
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
-          WH XBOX HALO https://bit.ly/2XFKOjG ................................................................................
+          WH XBOX HALO https://bit.ly/2XFKOjG ...............................................................................
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
           NL PS5 DIGITAL https://bit.ly/3u82AYA ................................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
