--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
           WH XBOX HALO https://bit.ly/2XFKOjG ..............................................................................
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
-          NL PS5 DIGITAL https://bit.ly/3u82AYA ................................................................................
+          NL PS5 DIGITAL https://bit.ly/3u82AYA ..............................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
           JB XBoxX https://bit.ly/39oP7lB ......................................................................................
           MA XBoxX https://bit.ly/3lFB54w ......................................................................................
@@ -27,7 +27,7 @@ jobs:
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
           WH XBOX HALO https://bit.ly/2XFKOjG ..............................................................................
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
-          NL PS5 DIGITAL https://bit.ly/3u82AYA ................................................................................
+          NL PS5 DIGITAL https://bit.ly/3u82AYA ..............................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
           JB XBoxX https://bit.ly/39oP7lB ......................................................................................
           MA XBoxX https://bit.ly/3lFB54w ......................................................................................
