--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs:
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
           NL PS5 DIGITAL https://bit.ly/3u82AYA ..............................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
-          JB XBoxX https://bit.ly/39oP7lB ......................................................................................
-          MA XBoxX https://bit.ly/3lFB54w ......................................................................................
+          JB XBoxX https://bit.ly/39oP7lB ..........................................................................................
+          MA XBoxX https://bit.ly/3lFB54w ..........................................................................................
           MA PS5 DIGITAL https://bit.ly/2W4e6Ym ................................................................................"
           success_message: "WH PS5 DISK https://bit.ly/3lMC2bt ...................................................................................
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
@@ -29,8 +29,8 @@ jobs:
           NL PS5 DISK https://bit.ly/3EFhSZD ...................................................................................
           NL PS5 DIGITAL https://bit.ly/3u82AYA ..............................................................................
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
-          JB XBoxX https://bit.ly/39oP7lB ......................................................................................
-          MA XBoxX https://bit.ly/3lFB54w ......................................................................................
+          JB XBoxX https://bit.ly/39oP7lB ..........................................................................................
+          MA XBoxX https://bit.ly/3lFB54w ..........................................................................................
           MA PS5 DIGITAL https://bit.ly/2W4e6Ym ................................................................................"
           
 workflows:
