--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
           JB XBoxX https://bit.ly/39oP7lB ..........................................................................................
           MA XBoxX https://bit.ly/3lFB54w ..........................................................................................
-          MA PS5 DIGITAL https://bit.ly/2W4e6Ym ................................................................................"
+          MA PS5 DIGITAL https://bit.ly/2W4e6Ym ........................................................................"
           success_message: "WH PS5 DISK https://bit.ly/3lMC2bt ...................................................................................
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
           WH XBOX HALO https://bit.ly/2XFKOjG ..............................................................................
@@ -31,7 +31,7 @@ jobs:
           NL XBoxX https://bit.ly/3EPMNma ......................................................................................
           JB XBoxX https://bit.ly/39oP7lB ..........................................................................................
           MA XBoxX https://bit.ly/3lFB54w ..........................................................................................
-          MA PS5 DIGITAL https://bit.ly/2W4e6Ym ................................................................................"
+          MA PS5 DIGITAL https://bit.ly/2W4e6Ym ........................................................................"
           
 workflows:
   version: 2
