--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           collection: ./Stock.postman_collection.json
       - discord/status:
           webhook: "${DISCORD_STATUS_WEBHOOK}"
-          fail_only: false
+          fail_only: true
           failure_message: "WH PS5 DISK https://bit.ly/3lMC2bt ...................................................................................
           WH PS5 DIGITAL https://bit.ly/3Avb1zj ................................................................................
           WH XBOX HALO https://bit.ly/2XFKOjG ..............................................................................
